--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+	"version": 2,
+	"framework": "nextjs",
 	"buildCommand": "yarn build",
 	"installCommand": "yarn init-clean",
 	"rootDirectory": "yaspp",
