--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "cd yaspp && yarn dev",
     "build": "cd yaspp && yarn build",
     "start": "cd yaspp && yarn start",
-    "save-yaspp": "rm -rf yaspp/*",
+    "save-yaspp": "rm -rf yaspp/* yaspp/.*",
     "restore-yaspp": "echo stub > yaspp/yaspp.stub"
   }
 }
